# ubuntu-codexbar

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml  pyrightconfig.json  setup.py
src/codexbar/: __init__.py  auth_identity.py  cli.py  fs_utils.py  importers.py  models.py  paths.py  profile_store.py  quota_probe.py  switch_engine.py  tui.py  usage_stats.py
tests/: test_core.py  test_profiles.py  test_usage.py
ubuntu-codexbar/: SKILL.md
ubuntu-codexbar/agents/: openai.yaml
ubuntu-codexbar/references/: cli-workflow.md  state-model.md
